Updated readme and docs